// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringLT(5) expectTypeFailure(1): TYPE_FAILURE::StringLT(1) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": 1,
      "expected": [Function],
      "message": "Invalid value 1 supplied to String",
      "path": Array [],
    },
  ],
  "value": 1,
}
`;

exports[`StringLT(5) expectTypeFailure(55555): TYPE_FAILURE::StringLT(55555) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "55555",
      "expected": [Function],
      "message": "Invalid value \\"55555\\" supplied to StringLT",
      "path": Array [],
    },
  ],
  "value": "55555",
}
`;

exports[`StringLT(5) expectTypeFailure(666666): TYPE_FAILURE::StringLT(666666) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "666666",
      "expected": [Function],
      "message": "Invalid value \\"666666\\" supplied to StringLT",
      "path": Array [],
    },
  ],
  "value": "666666",
}
`;
